Remove id selectors, add all group members to metadata, remove inline style, format all files

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
   <meta name="description" content="This is the about page for our website">
-  
+
   <title>About</title>
 
   <!-- link font -->
@@ -35,14 +35,14 @@
           <li class="nav-link"><a href="explore.html">Explore</a></li>
           <li class="nav-link"><a href="about.html">About</a></li>
           <div class="button-right">
-            <button class="btn btn-light" style="color:#595c3f">Login</button>
-            <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+            <button class="btn btn-light">Login</button>
+            <button class="btn btn-light">Sign Up</button>
           </div>
         </ul>
       </div>
     </nav>
-    
-    <section id="about">
+
+    <section class="about-text">
       <div class="container">
         <h1>About Us</h1>
         <p>Created by: Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu</p>
@@ -67,7 +67,7 @@
     <h2>Contact Us!</h2>
     <form>
       <div class="form-item">
-        <label for="name-input">Name:</label> 
+        <label for="name-input">Name:</label>
         <input id="name-input" type="text" name="username">
       </div>
       <div class="form-item">
@@ -75,12 +75,12 @@
         <input id="email-input" type="email" name="useremail">
       </div>
       <div class="form-item">
-        <label for="comment-text">Comment:</label> 
-        <textarea id="comment-text"></textarea>
+        <label for="comment-text">Comment:</label>
+        <input id="comment-text"></input>
       </div>
       <div>
         <button type="submit">Submit</button>
-      </div>      
+      </div>
     </form>
   </section>
 
