--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
   <meta name="description" content="This is the homepage to our website">
-  
+
   <title>Plants</title>
 
   <!-- link font -->
@@ -29,15 +29,15 @@
   <nav class="navbar-expand">
     <div>
       <ul class="nav">
-      <li class="nav-link"><a href="index.html">Home</a></li>
-      <li class="nav-link"><a href="quiz.html">Quiz</a></li>
-      <li class="nav-link"><a href="calendar.html">Calendar</a></li>
-      <li class="nav-link"><a href="explore.html">Explore</a></li>
-      <li class="nav-link"><a href="about.html">About</a></li>
-      <div class="button-right">
-      <button class="btn btn-light" style="color:#595c3f">Login</button>
-      <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
-      </div>
+        <li class="nav-link"><a href="index.html">Home</a></li>
+        <li class="nav-link"><a href="quiz.html">Quiz</a></li>
+        <li class="nav-link"><a href="calendar.html">Calendar</a></li>
+        <li class="nav-link"><a href="explore.html">Explore</a></li>
+        <li class="nav-link"><a href="about.html">About</a></li>
+        <div class="button-right">
+          <button class="btn btn-light">Login</button>
+          <button class="btn btn-light">Sign Up</button>
+        </div>
       </ul>
     </div>
   </nav>
@@ -45,22 +45,22 @@
   <div class="container-fluid h-100">
 
     <div class="row h-100">
-      
+
       <div id="backdrop-container" class="col">
       </div>
 
-      <div id="text-container" class="col">
-        <header>
-          <img id="plant" src="img/plant-icon.png" alt="plant icon">
-          <h1>Plant Parenthood</h1>
-      </header>
-        <h2>Start your plant journey today.</h2>
-        <h2>Explore different types of plants</h2>
-        <h2>Take the quiz to find the plants that work best for you</h2>
-        <h2>Use the calendar to track your watering schedule</h2>
-        <button class="btn btn-default">Login</button>
-        <button class="btn btn-default">Sign Up</button>
-      </div>
+        <div class="col">
+          <header>
+            <img class="plant" src="img/plant-icon.png" alt="plant icon">
+            <h1>Plant Parenthood</h1>
+          </header>
+          <h2>Start your plant journey today</h2>
+          <h2>Explore different types of plants</h2>
+          <h2>Take the quiz to find the plants that work best for you</h2>
+          <h2>Use the calendar to track your watering schedule</h2>
+          <button class="btn btn-default">Login</button>
+          <button class="btn btn-default">Sign Up</button>
+        </div>
 
     </div>
 
@@ -68,7 +68,7 @@
 
   <footer>
     <cite>&copy; Alp Duran https://unsplash.com/photos/5MrddkW_Cbg</cite>
-  </footer>  
+  </footer>
 
 </body>
 
