--- a/explore.html
+++ b/explore.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Kriti Vajjhula, ">
+    <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
     <meta name="description" content="This page allows the user to view an index of different kinds of houseplants">
 
     <title>Explore!</title>
@@ -33,8 +33,8 @@
                 <li class="nav-link"><a href="explore.html">Explore</a></li>
                 <li class="nav-link"><a href="about.html">About</a></li>
                 <div class="button-right">
-                    <button class="btn btn-light" style="color:#595c3f">Login</button>
-                    <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+                    <button class="btn btn-light">Login</button>
+                    <button class="btn btn-light">Sign Up</button>
                 </div>
             </ul>
         </div>
