--- a/plantinfo.html
+++ b/plantinfo.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
   <meta name="description" content="Shows a quick informational guide to the African Violet Plant">
- 
+
   <title>Explore</title>
- 
+
   <!-- link font -->
   <link href="https://fonts.googleapis.com">
   <link href="https://fonts.gstatic.com" crossorigin>
@@ -33,8 +33,8 @@
         <li class="nav-link"><a href="explore.html">Explore</a></li>
         <li class="nav-link"><a href="about.html">About</a></li>
         <div class="button-right">
-          <button class="btn btn-light" style="color:#595c3f">Login</button>
-          <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+          <button class="btn btn-light">Login</button>
+          <button class="btn btn-light">Sign Up</button>
       </ul>
     </div>
   </nav>
