--- a/questionTemplate.html
+++ b/questionTemplate.html
@@ -4,7 +4,8 @@
 <head>
 
   <meta charset="UTF-8">
-  <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Saimanasvi Charugundla">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
   <meta name="description" content="This is the quiz question page to our website">
 
   <title>Quiz</title>
@@ -16,28 +17,28 @@
 
   <!-- link bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
- 
+
   <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body class="quiz-template-body">
-    <nav class="navbar-expand">
-      <div>
-        <ul class="nav">
-          <li class="nav-link"><a href="index.html">Home</a></li>
-          <li class="nav-link"><a href="quiz.html">Quiz</a></li>
-          <li class="nav-link"><a href="calendar.html">Calendar</a></li>
-          <li class="nav-link"><a href="explore.html">Explore</a></li>
-          <li class="nav-link"><a href="about.html">About</a></li>
-          <div class="button-right">
-            <button class="btn btn-light" style="color:#595c3f">Login</button>
-            <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
-          </div>
-        </ul>
-      </div>
-    </nav>
-  
+  <nav class="navbar-expand">
+    <div>
+      <ul class="nav">
+        <li class="nav-link"><a href="index.html">Home</a></li>
+        <li class="nav-link"><a href="quiz.html">Quiz</a></li>
+        <li class="nav-link"><a href="calendar.html">Calendar</a></li>
+        <li class="nav-link"><a href="explore.html">Explore</a></li>
+        <li class="nav-link"><a href="about.html">About</a></li>
+        <div class="button-right">
+          <button class="btn btn-light">Login</button>
+          <button class="btn btn-light">Sign Up</button>
+        </div>
+      </ul>
+    </div>
+  </nav>
+
 
   <div class="quiz-question-container">
     <section id=question class=questions-part>
@@ -50,7 +51,7 @@
       </div>
     </section>
   </div>
-  
+
 </body>
 
 </html>
