--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <title>Plants</title>
 
+  <link rel="icon" type="image/png" href="img/plant-icon-white.png">
+
   <!-- link font -->
   <link href="https://fonts.googleapis.com">
   <link href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +21,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="css/style.css">
+
 
 </head>
 
@@ -49,18 +52,18 @@
       <div id="backdrop-container" class="col">
       </div>
 
-        <div class="col">
-          <header>
-            <img class="plant" src="img/plant-icon.png" alt="plant icon">
-            <h1>Plant Parenthood</h1>
-          </header>
-          <h2>Start your plant journey today</h2>
-          <h2>Explore different types of plants</h2>
-          <h2>Take the quiz to find the plants that work best for you</h2>
-          <h2>Use the calendar to track your watering schedule</h2>
-          <button class="btn btn-default">Login</button>
-          <button class="btn btn-default">Sign Up</button>
-        </div>
+      <div class="col">
+        <header>
+          <img class="plant" src="img/plant-icon-green.png" alt="plant icon">
+          <h1>Plant Parenthood</h1>
+        </header>
+        <h2>Start your plant journey today</h2>
+        <h2>Explore different types of plants</h2>
+        <h2>Take the quiz to find the plants that work best for you</h2>
+        <h2>Use the calendar to track your watering schedule</h2>
+        <button class="btn btn-default">Login</button>
+        <button class="btn btn-default">Sign Up</button>
+      </div>
 
     </div>
 
