Add favicon to each page

--- a/calendar.html
+++ b/calendar.html
@@ -11,6 +11,8 @@
 
     <title>Calendar</title>
 
+    <link rel="icon" type="image/png" href="img/plant-icon-white.png">
+
     <!-- link font -->
     <link href="https://fonts.googleapis.com">
     <link href="https://fonts.gstatic.com" crossorigin>
