--- a/explore.html
+++ b/explore.html
@@ -10,6 +10,8 @@
 
     <title>Explore!</title>
 
+    <link rel="icon" type="image/png" href="img/plant-icon-white.png">
+
     <!-- link font -->
     <link href="https://fonts.googleapis.com">
     <link href="https://fonts.gstatic.com" crossorigin>
