aria labels added

--- a/Project-Draft1/about.html
+++ b/Project-Draft1/about.html
@@ -37,8 +37,8 @@
           <li class="nav-link"><a href="explore.html">Explore</a></li>
           <li class="nav-link"><a href="about.html">About</a></li>
           <div class="button-right">
-            <button class="btn btn-light">Login</button>
-            <button class="btn btn-light">Sign Up</button>
+            <button class="btn btn-light" aria-label="login">Login</button>
+            <button class="btn btn-light" aria-label="sign up">Sign Up</button>
           </div>
         </ul>
       </div>
@@ -81,7 +81,7 @@
         <input id="comment-text"></input>
       </div>
       <div>
-        <button type="submit">Submit</button>
+        <button type="submit" aria-label="submit">Submit</button>
       </div>
     </form>
   </section>
