--- a/Project-Draft1/calendar.html
+++ b/Project-Draft1/calendar.html
@@ -36,8 +36,8 @@
                 <li class="nav-link"><a href="explore.html">Explore</a></li>
                 <li class="nav-link"><a href="about.html">About</a></li>
                 <div class="button-right">
-                    <button class="btn btn-light" style="color: #595c3f">Login</button>
-                    <button class="btn btn-light" style="color:#595c3f">Sign Up</button>
+                    <button class="btn btn-light" aria-label="login" style="color: #595c3f">Login</button>
+                    <button class="btn btn-light" aria-label="sign up" style="color:#595c3f">Sign Up</button>
                 </div>
             </ul>
         </div>
@@ -137,7 +137,7 @@
         </table>
     </div>
     <div class="add-event">
-        <button class="new-event"><a href="calendarevent.html">+</a></button>
+        <button class="new-event" aria-label="add event"><a href="calendarevent.html">+</a></button>
         <p class="button-text">Add New Event</p>
     </div>
 
