--- a/Project-Draft1/index.html
+++ b/Project-Draft1/index.html
@@ -38,8 +38,8 @@
           <li class="nav-link"><a href="explore.html">Explore</a></li>
           <li class="nav-link"><a href="about.html">About</a></li>
           <div class="button-right">
-            <button class="btn btn-light">Login</button>
-            <button class="btn btn-light">Sign Up</button>
+            <button class="btn btn-light" aria-label="login">Login</button>
+            <button class="btn btn-light" aria-label="sign up">Sign Up</button>
           </div>
         </ul>
       </div>
@@ -62,8 +62,8 @@
         <h2>Explore different types of plants</h2>
         <h2>Take the quiz to find the plants that work best for you</h2>
         <h2>Use the calendar to track your watering schedule</h2>
-        <button class="btn btn-default">Login</button>
-        <button class="btn btn-default">Sign Up</button>
+        <button class="btn btn-light" aria-label="login">Login</button>
+        <button class="btn btn-light" aria-label="sign up">Sign Up</button>
       </div>
 
     </div>
