--- a/Project-Draft1/questionTemplate.html
+++ b/Project-Draft1/questionTemplate.html
@@ -33,9 +33,9 @@
         <li class="nav-link"><a href="calendar.html">Calendar</a></li>
         <li class="nav-link"><a href="explore.html">Explore</a></li>
         <li class="nav-link"><a href="about.html">About</a></li>
-        <div class="button-right">
-          <button class="btn btn-light">Login</button>
-          <button class="btn btn-light">Sign Up</button>
+
+        <button class="btn btn-light" aria-label="login">Login</button>
+        <button class="btn btn-light" aria-label="sign up">Sign Up</button>
         </div>
       </ul>
     </div>
@@ -48,8 +48,8 @@
         <h2 class=question>Have you owned a plant before?</h2>
       </div>
       <div class="quiz-options">
-        <button class="btn btn-default">Yes</button>
-        <button class="btn btn-default">No</button>
+        <button class="btn btn-default" aria-label="yes option">Yes</button>
+        <button class="btn btn-default" aria-label="no option">No</button>
       </div>
     </section>
   </div>
