--- a/Project-Draft1/quiz 2.html
+++ b/Project-Draft1/quiz 2.html
@@ -40,6 +40,6 @@
     </header>
 
     <div class="quiz-contain">
-        <button class="quiz-button"><a href="questionTemplate.html">Start Quiz</a></button>
+        <button class="quiz-button" aria-label="start quiz"><a href="questionTemplate.html">Start Quiz</a></button>
     </div>
 </body>
