--- a/Project-Draft1/calendarevent.html
+++ b/Project-Draft1/calendarevent.html
@@ -35,8 +35,8 @@
                 <li class="nav-link"><a href="explore.html">Explore</a></li>
                 <li class="nav-link"><a href="about.html">About</a></li>
                 <div class="button-right">
-                    <button class="btn btn-light">Login</button>
-                    <button class="btn btn-light">Sign Up</button>
+                    <button class="btn btn-light" aria-label="login">Login</button>
+                    <button class="btn btn-light" aria-label="sign up">Sign Up</button>
 
                 </div>
             </ul>
@@ -46,8 +46,8 @@
     <div class="calendar-Event">
         <div class="card-container">
             <nav>
-                <button class="card-nav">X</button>
-                <button class="card-nav">Save</button>
+                <button class="card-nav" aria-label="leave page">X</button>
+                <button class="card-nav" aria-label="save">Save</button>
             </nav>
             <div class="card">
                 <section>
