--- a/Project-Draft1/questionTemplate 2.html
+++ b/Project-Draft1/questionTemplate 2.html
@@ -24,8 +24,8 @@
             <li class="nav-link"><a href="about.html">About</a></li>
             <li class="nav-link"><a href="explore.html">Explore</a></li>
             <div class="button-right">
-              <button class="btn btn-light">Login</button>
-              <button class="btn btn-light">Sign Up</button>
+              <button class="btn btn-light" aria-label="login">Login</button>
+              <button class="btn btn-light" aria-label="sign up">Sign Up</button>
             </div>
             </ul>
           </div>
@@ -38,8 +38,8 @@
                 <h2 class=question>Have you owned a plant before?</h2>
             </div>
             <div class="quiz-options">
-                <button class="quiz-button-choice" role="button">No</button>
-                <button class="quiz-button-choice" role="button">Yes</button>
+                <button class="quiz-button-choice" role="button" aria-label="no option">No</button>
+                <button class="quiz-button-choice" role="button" aria-label="yes option">Yes</button>
             </div>
         </section>
     </div>
