--- a/Project-Draft1/quiz.html
+++ b/Project-Draft1/quiz.html
@@ -36,8 +36,8 @@
           <li class="nav-link"><a href="explore.html">Explore</a></li>
           <li class="nav-link"><a href="about.html">About</a></li>
           <div class="button-right">
-            <button class="btn btn-light">Login</button>
-            <button class="btn btn-light">Sign Up</button>
+            <button class="btn btn-light" aria-label="login">Login</button>
+            <button class="btn btn-light" aria-label="sign up">Sign Up</button>
           </div>
         </ul>
       </div>
@@ -52,11 +52,11 @@
     </header>
 
     <div class="quiz-contain">
-      <button class="btn btn-light"><a href="questionTemplate.html">Start Quiz</a></button>
+      <button class="btn btn-light" aria-label="start quiz"><a href="questionTemplate.html">Start Quiz</a></button>
     </div>
     </section>
     <div class="quiz-contain">
-      <button class="btn btn-light">
+      <button class="btn btn-light" aria-label="start quiz">
         <a href="questionTemplate.html">Start Quiz</a>
       </button>
     </div>
