--- a/Project-Draft1/quizResult.html
+++ b/Project-Draft1/quizResult.html
@@ -34,8 +34,8 @@
         <li class="nav-link"><a href="explore.html">Explore</a></li>
         <li class="nav-link"><a href="about.html">About</a></li>
         <div class="button-right">
-          <button class="btn btn-light">Login</button>
-          <button class="btn btn-light">Sign Up</button>
+            <button class="btn btn-light" aria-label="login">Login</button>
+            <button class="btn btn-light" aria-label="sign up">Sign Up</button>
         </div>
       </ul>
     </div>
