converted calender page to form

--- a/Project-Draft1/calendar.html
+++ b/Project-Draft1/calendar.html
@@ -48,13 +48,13 @@
         <table>
             <thead>
                 <tr>
-                    <th>Sunday</th>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
-                    <th>Saturday</th>
+                        <th>Sunday</th>
+                        <th>Monday</th>
+                        <th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+                        <th>Saturday</th>
                 </tr>
             </thead>
             <tbody>
@@ -138,9 +138,7 @@
     </div>
     <div class="add-event">
         <button class="new-event" aria-label="add event"><a href="calendarevent.html">+</a></button>
-        <p class="button-text">Add New Event</p>
+        <p class="button-text">Add New Event</p> -->
     </div>
-
 </body>
-
 </html>
