--- a/Project-Draft1/calendarevent.html
+++ b/Project-Draft1/calendarevent.html
@@ -43,7 +43,7 @@
         </div>
     </nav>
 
-    <div class="calendar-Event">
+    <!-- <div class="calendar-Event">
         <div class="card-container">
             <nav>
                 <button class="card-nav" aria-label="leave page">X</button>
@@ -66,6 +66,38 @@
                     <ul>Moved Plants to get Sunlight</ul>
                 </section>
             </div>
+        </div>
+    </div> -->
+
+
+    <div class="calendar-Event">
+        <div class="card-container">
+            <nav>
+                <h2 class="form-title">Add an Event</h2>
+                <form>
+                    <div class="form-item">
+                        <label for="event-input">Event Name:</label>
+                        <input id="event-input" type="text" name="eventname">
+                    </div>
+                    <div class="form-item">
+                        <label for="date-input">Date:</label>
+                        <input id="date-input" type="date" name="date">
+                    </div>
+                    <div class="form-item">
+                        <label for="notes-input">Add Notes:</label>
+                        <input id="notes-input" type="text" name="addnotes">
+                    </div>
+                    <div class="form-item">
+                        <label for="attachment-input">Add Attachments:</label>
+                        <input id="attachment-input" type="image" name="addattachment">
+                    </div>
+                    <div>
+                        <button class = form-btn type="submit" aria-label="submit">Submit</button>
+                        <button class = form-btn type="cancel" aria-label="cancel">Cancel</button>
+                      </div>
+
+                </form>
+            </nav>
         </div>
     </div>
 
