update calender form

--- a/Project-Draft1/calendarevent.html
+++ b/Project-Draft1/calendarevent.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="form-item">
                         <label for="attachment-input">Add Attachments:</label>
-                        <input id="attachment-input" type="image" name="addattachment">
+                        <input id="attachment-input" type="file" name="addattachment">
                     </div>
                     <div>
                         <button class = form-btn type="submit" aria-label="submit">Submit</button>
