remove contact us form and add footer on about page

--- a/Project-Draft1/about.html
+++ b/Project-Draft1/about.html
@@ -23,6 +23,9 @@
 
   <link rel="stylesheet" href="css/style.css">
 
+  <!-- link Material Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body class="about-body">
@@ -65,26 +68,13 @@
     </section>
   </main>
 
-  <section class="contact-form">
-    <h2>Contact Us!</h2>
-    <form>
-      <div class="form-item">
-        <label for="name-input">Name:</label>
-        <input id="name-input" type="text" name="username">
-      </div>
-      <div class="form-item">
-        <label for="email-input">Email:</label>
-        <input id="email-input" type="email" name="useremail">
-      </div>
-      <div class="form-item">
-        <label for="comment-text">Comment:</label>
-        <input id="comment-text"></input>
-      </div>
-      <div>
-        <button type="submit" aria-label="submit">Submit</button>
-      </div>
-    </form>
-  </section>
+  <footer>
+    <div>
+    <p><a href="mailto:plant@plantparenthood.com"><span class="material-icons">email</span> plant@plantparenthood.com</a></p>
+    <p>&copy; Plant Parenthood 2022</p>
+  </div>
+
+  </footer>
 </body>
 
 </html>
