more footer edits

--- a/Project-Draft1/explore.html
+++ b/Project-Draft1/explore.html
@@ -48,9 +48,14 @@
     <div class="explore-container">
         <div class="explore-item">African Violet
             <div class="plant-img">
-                <a href="../project-kvajjhula/plantinfo.html">
-                    <img src="../project-kvajjhula/img/africanviolet.png" alt="african violet">
+                <a href="/Project-Draft1/plantinfo.html">
+                    <img src="/Project-Draft1/img/africanviolet.png" alt="african violet">
                 </a>
+
+<!-- 
+                <a href="../project-kvajjhula/Project-Draft1/plantinfo.html">
+                    <img src="../project-kvajjhula/Project-Draft1/img/africanviolet.png" alt="african violet">
+                </a> -->
             </div>
         </div>
         <div class="explore-item">Aglaonema
