--- a/Project-Draft1/about.html
+++ b/Project-Draft1/about.html
@@ -70,9 +70,10 @@
 
   <footer>
     <div>
-    <p><a href="mailto:plant@plantparenthood.com"><span class="material-icons">email</span> plant@plantparenthood.com</a></p>
-    <p>&copy; Plant Parenthood 2022</p>
-  </div>
+      <p class="contact-text">Contact Us!</p>
+      <p><a href="mailto:plant@plantparenthood.com"><span class="material-icons">email</span>plant@plantparenthood.com</a></p>
+      <p>&copy; Plant Parenthood 2022</p>
+    </div>
 
   </footer>
 </body>
