delete copies of plant images and change file paths for images on explore page

--- a/Project-Draft1/explore.html
+++ b/Project-Draft1/explore.html
@@ -49,68 +49,63 @@
         <div class="explore-item">African Violet
             <div class="plant-img">
                 <a href="/Project-Draft1/plantinfo.html">
-                    <img src="/Project-Draft1/img/africanviolet.png" alt="african violet">
+                    <img src="./img/africanviolet.png" alt="african violet">
                 </a>
-
-<!-- 
-                <a href="../project-kvajjhula/Project-Draft1/plantinfo.html">
-                    <img src="../project-kvajjhula/Project-Draft1/img/africanviolet.png" alt="african violet">
-                </a> -->
             </div>
         </div>
         <div class="explore-item">Aglaonema
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/aglaonema.png" alt="aglaonema">
+                <img src="./img/aglaonema.png" alt="aglaonema">
             </div>
         </div>
         <div class="explore-item">Alocasia
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/alocasia.png" alt="alocasia">
+                <img src="./img/alocasia.png" alt="alocasia">
             </div>
         </div>
         <div class="explore-item">Aloe Vera
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/aloevera.png" alt="aloe vera">
+                <img src="./img/aloevera.png" alt="aloe vera">
             </div>
         </div>
         <div class="explore-item">Angel Wing Begonia
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/angelwingbegonia.png" alt="angel wing begonia">
+                <img src="./img/angelwingbegonia.png" alt="angel wing begonia">
             </div>
         </div>
         <div class="explore-item">Anthurium
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/anthurium.png" alt="anthurium">
+                <img src="./img/anthurium.png" alt="anthurium">
             </div>
         </div>
         <div class="explore-item">Areca Palm
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/arecapalm.png" alt="areca palm">
+                <img src="./img/arecapalm.png" alt="areca palm">
             </div>
         </div>
         <div class="explore-item">Aspidistra
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/aspidistra.png" alt="aspidistra">
+                <img src="./img/aspidistra.png" alt="aspidistra">
             </div>
         </div>
         <div class="explore-item">Baby Rubber Plant
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/babyrubberplant.png" alt="baby rubber plant">
+                <img src="./img/babyrubberplant.png" alt="baby rubber plant">
             </div>
         </div>
         <div class="explore-item">Bird's Nest Fern
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/birdsnestfern.png" alt="bird's nest fern">
+                <img src="./img/birdsnestfern.png" alt="bird's nest fern">
             </div>
         </div>
         <div class="explore-item">Bird of Paradise
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/birdofparadise.png" alt="bird of paradise">
+                <img src="./img/birdofparadise.png" alt="bird of paradise">
             </div>
         </div>
         <div class="explore-item">Blue Star Fern
             <div class="plant-img">
-                <img src="../project-kvajjhula/img/bluestarfern.png" alt="blue star fern">
+                <img src="./img/bluestarfern.png" alt="blue star fern">
             </div>
         </div>
     </div>
