Add citations for explore images

--- a/Project-Draft1/explore.html
+++ b/Project-Draft1/explore.html
@@ -50,62 +50,74 @@
             <div class="plant-img">
                 <a href="/Project-Draft1/plantinfo.html">
                     <img src="./img/africanviolet.png" alt="african violet">
+                    <cite>Source: ROBERT HORVAT/GETTY IMAGES</cite>
                 </a>
             </div>
         </div>
         <div class="explore-item">Aglaonema
             <div class="plant-img">
                 <img src="./img/aglaonema.png" alt="aglaonema">
+                <cite>Source: plants.com</cite>
             </div>
         </div>
         <div class="explore-item">Alocasia
             <div class="plant-img">
                 <img src="./img/alocasia.png" alt="alocasia">
+                <cite>Source: IKEA.com</cite>
             </div>
         </div>
         <div class="explore-item">Aloe Vera
             <div class="plant-img">
                 <img src="./img/aloevera.png" alt="aloe vera">
+                <cite>Source: poetschke.de</cite>
             </div>
         </div>
         <div class="explore-item">Angel Wing Begonia
             <div class="plant-img">
                 <img src="./img/angelwingbegonia.png" alt="angel wing begonia">
+                <cite>Source: HOME FOR THE HARVEST</cite>
             </div>
         </div>
         <div class="explore-item">Anthurium
             <div class="plant-img">
                 <img src="./img/anthurium.png" alt="anthurium">
+                <cite>Source: plants.com</cite>
             </div>
         </div>
         <div class="explore-item">Areca Palm
             <div class="plant-img">
                 <img src="./img/arecapalm.png" alt="areca palm">
+                <cite>Source: GARDENING KNOW HOW</cite>
             </div>
         </div>
         <div class="explore-item">Aspidistra
             <div class="plant-img">
                 <img src="./img/aspidistra.png" alt="aspidistra">
+                <cite>Source: Lazy Flora</cite>
             </div>
         </div>
         <div class="explore-item">Baby Rubber Plant
             <div class="plant-img">
                 <img src="./img/babyrubberplant.png" alt="baby rubber plant">
+                <cite>Source: Green Door Garden</cite>
             </div>
         </div>
         <div class="explore-item">Bird's Nest Fern
             <div class="plant-img">
                 <img src="./img/birdsnestfern.png" alt="bird's nest fern">
+                <cite>Source: Linda's Flowers</cite>
             </div>
         </div>
         <div class="explore-item">Bird of Paradise
             <div class="plant-img">
                 <img src="./img/birdofparadise.png" alt="bird of paradise">
+                <cite>Source: Spacejoy</cite>
             </div>
         </div>
         <div class="explore-item">Blue Star Fern
             <div class="plant-img">
                 <img src="./img/bluestarfern.png" alt="blue star fern">
+                <cite>Source: Gardening Zeal</cite>
             </div>
         </div>
     </div>
