reformat explore page and plant info

--- a/Project-Draft1/index.html
+++ b/Project-Draft1/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
   <meta name="description" content="This is the homepage to our website">
 
-  <title>Plants</title>
+  <title>Plant Parenthood</title>
 
   <link rel="icon" type="image/png" href="img/plant-icon-white.png">
 
