--- a/Project-Draft1/plantinfo.html
+++ b/Project-Draft1/plantinfo.html
@@ -45,7 +45,7 @@
     <h1 class="plant-info-heading">African Violet</h1>
     <div class="plant-img-container">
       <div class="plant-img">
-        <img src="../project-kvajjhula/img/africanviolet.png" alt="african violet">
+        <img src="./img/africanviolet.png" alt="african violet">
       </div>
     </div>
     <div class="care-info">
