--- a/Project-Draft1/explore.html
+++ b/Project-Draft1/explore.html
@@ -46,75 +46,87 @@
     <h1 class="explore-heading">Find your perfect plant!</h1>
     <h2 class="explore-subheading">Search for different species of houseplants in our houseplant index.</h2>
     <div class="explore-container">
-        <div class="explore-item">African Violet
+        <div class="explore-item">
+            <h3>African Violet</h3>
             <div class="plant-img">
-                <a href="/Project-Draft1/plantinfo.html">
+                <a href="plantinfo.html">
                     <img src="./img/africanviolet.png" alt="african violet">
-                    <cite>Source: ROBERT HORVAT/GETTY IMAGES</cite>
                 </a>
+                <cite>Source: ROBERT HORVAT/GETTY IMAGES</cite>
             </div>
         </div>
-        <div class="explore-item">Aglaonema
+        <div class="explore-item">
+            <h3>Aglaonema</h3>
             <div class="plant-img">
                 <img src="./img/aglaonema.png" alt="aglaonema">
                 <cite>Source: plants.com</cite>
             </div>
         </div>
-        <div class="explore-item">Alocasia
+        <div class="explore-item">
+            <h3>Alocasia</h3>
             <div class="plant-img">
                 <img src="./img/alocasia.png" alt="alocasia">
                 <cite>Source: IKEA.com</cite>
             </div>
         </div>
-        <div class="explore-item">Aloe Vera
+        <div class="explore-item">
+            <h3>Aloe Vera</h3>
             <div class="plant-img">
                 <img src="./img/aloevera.png" alt="aloe vera">
                 <cite>Source: poetschke.de</cite>
             </div>
         </div>
-        <div class="explore-item">Angel Wing Begonia
+        <div class="explore-item">
+            <h3>Angel Wing Begonia</h3>
             <div class="plant-img">
                 <img src="./img/angelwingbegonia.png" alt="angel wing begonia">
                 <cite>Source: HOME FOR THE HARVEST</cite>
             </div>
         </div>
-        <div class="explore-item">Anthurium
+        <div class="explore-item">
+            <h3>Anthurium</h3>
             <div class="plant-img">
                 <img src="./img/anthurium.png" alt="anthurium">
                 <cite>Source: plants.com</cite>
             </div>
         </div>
-        <div class="explore-item">Areca Palm
+        <div class="explore-item">
+            <h3>Areca Palm</h3>
             <div class="plant-img">
                 <img src="./img/arecapalm.png" alt="areca palm">
                 <cite>Source: GARDENING KNOW HOW</cite>
             </div>
         </div>
-        <div class="explore-item">Aspidistra
+        <div class="explore-item">
+            <h3>Aspidistra</h3>
             <div class="plant-img">
                 <img src="./img/aspidistra.png" alt="aspidistra">
                 <cite>Source: Lazy Flora</cite>
             </div>
         </div>
-        <div class="explore-item">Baby Rubber Plant
+        <div class="explore-item">
+            <h3>Baby Rubber Plant</h3>
             <div class="plant-img">
                 <img src="./img/babyrubberplant.png" alt="baby rubber plant">
                 <cite>Source: Green Door Garden</cite>
             </div>
         </div>
-        <div class="explore-item">Bird's Nest Fern
+        <div class="explore-item">
+            <h3>Bird's Nest Fern</h3>
             <div class="plant-img">
                 <img src="./img/birdsnestfern.png" alt="bird's nest fern">
                 <cite>Source: Linda's Flowers</cite>
             </div>
         </div>
-        <div class="explore-item">Bird of Paradise
+        <div class="explore-item">
+            <h3>Bird of Paradise</h3>
             <div class="plant-img">
                 <img src="./img/birdofparadise.png" alt="bird of paradise">
                 <cite>Source: Spacejoy</cite>
             </div>
         </div>
-        <div class="explore-item">Blue Star Fern
+        <div class="explore-item">
+            <h3>Blue Star Fern</h3>
             <div class="plant-img">
                 <img src="./img/bluestarfern.png" alt="blue star fern">
                 <cite>Source: Gardening Zeal</cite>
