fix anchor link path

--- a/Project-Draft1/quiz.html
+++ b/Project-Draft1/quiz.html
@@ -52,12 +52,12 @@
     </header>
 
     <div class="quiz-contain">
-      <button class="btn btn-light" aria-label="start quiz"><a href="questionTemplate.html">Start Quiz</a></button>
+      <button class="btn btn-light" aria-label="start quiz"><a href="./questionTemplate.html">Start Quiz</a></button>
     </div>
     </section>
     <div class="quiz-contain">
       <button class="btn btn-light" aria-label="start quiz">
-        <a href="questionTemplate.html">Start Quiz</a>
+        <a href="./questionTemplate.html">Start Quiz</a>
       </button>
     </div>
     </section>
