quiz page add media query

--- a/Project-Draft1/quiz.html
+++ b/Project-Draft1/quiz.html
@@ -57,7 +57,7 @@
     </section>
     <div class="quiz-contain">
       <button class="btn btn-light" aria-label="start quiz">
-        <a href="./questionTemplate.html">Start Quiz</a>
+        <a href="./questionTemplate.html" class=big-start>Start Quiz</a>
       </button>
     </div>
     </section>
