restore background image to img directory and switch cyperus img in explore.html

--- a/Project-Draft1/explore.html
+++ b/Project-Draft1/explore.html
@@ -225,7 +225,7 @@
             <h3>Cyperus</h3>
             <div class="plant-img">
                 <img src="" alt="Cyperus">
-                <cite>Source: Laidback Gardener</cite>
+                <cite>Source: House Beautiful</cite>
             </div>
         </div>
 
