plant.json file complete

--- a/Project-Draft1/explore.html
+++ b/Project-Draft1/explore.html
@@ -302,14 +302,6 @@
         </div>
 
         <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
             <h3>Fiddle-Leaf Fig</h3>
             <div class="plant-img">
                 <img src="" alt="Fiddle-Leaf Fig">
@@ -322,14 +314,6 @@
             <div class="plant-img">
                 <img src="" alt="Fittonia">
                 <cite>Source: Laidback Gardener</cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
             </div>
         </div>
 
@@ -366,14 +350,6 @@
         </div>
 
         <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
             <h3>Hibiscus</h3>
             <div class="plant-img">
                 <img src="" alt="Hibiscus">
@@ -385,14 +361,6 @@
             <h3>Hippeastrum</h3>
             <div class="plant-img">
                 <img src="" alt="Hippeastrum">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
                 <cite>Source: Blue Buddha Farm</cite>
             </div>
         </div>
@@ -409,23 +377,7 @@
             <h3>Hoya Kerrii</h3>
             <div class="plant-img">
                 <img src="" alt="Hoya KerriiHoya Kerrii">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: Hoya Kerrii</cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
+                <cite>Source: plants.com</cite>
             </div>
         </div>
 
@@ -478,42 +430,10 @@
         </div>
 
         <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
             <h3>Kangaroo Paw Fern</h3>
             <div class="plant-img">
                 <img src="" alt="Kangaroo Paw Fern">
                 <cite>Source: Bloomscape</cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
             </div>
         </div>
 
@@ -598,22 +518,6 @@
         </div>
 
         <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
             <h3>Pachypodium</h3>
             <div class="plant-img">
                 <img src="" alt="Pachypodium">
@@ -638,14 +542,6 @@
         </div>
 
         <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
             <h3>Peperomia</h3>
             <div class="plant-img">
                 <img src="" alt="Peperomia">
@@ -665,7 +561,7 @@
             <h3>Pilea Peperomioides</h3>
             <div class="plant-img">
                 <img src="" alt="Pilea Peperomioides">
-                <cite>Source: </cite>
+                <cite>Source: plants.com</cite>
             </div>
         </div>
 
@@ -850,22 +746,6 @@
             <div class="plant-img">
                 <img src="" alt="Tillandsia">
                 <cite>Source: Gardener's Path</cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
-            </div>
-        </div>
-
-        <div class="explore-item">
-            <h3></h3>
-            <div class="plant-img">
-                <img src="" alt="">
-                <cite>Source: </cite>
             </div>
         </div>
 
