--- a/Project-Draft1/plantinfo.html
+++ b/Project-Draft1/plantinfo.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 
-<head>
-
+<head> -->
+<!-- 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu">
@@ -10,19 +11,19 @@
 
   <title>Explore</title>
 
-  <link rel="icon" type="image/png" href="img/plant-icon-white.png">
+  <link rel="icon" type="image/png" href="img/plant-icon-white.png"> -->
 
   <!-- link font -->
-  <link href="https://fonts.googleapis.com">
+  <!-- <link href="https://fonts.googleapis.com">
   <link href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet"> -->
 
   <!-- link bootstrap -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css"> -->
 
-</head>
+<!-- </head>
 
 <body>
 
@@ -61,4 +62,4 @@
 
   </div>
 
-</body>
+</body> -->
