--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charSet="UTF-8" />
-    <meta
-        name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-        name="author"
-        content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu"
-    />
-    <meta name="description" content="This is the homepage to our website" />
-    <title>Plant Parenthood</title>
-    <link rel="icon" type="image/png" href="./img/plant-icon-white.png" />
 
-    <!-- IMPORT FONTS -->
-    <link href="https://fonts.googleapis.com" />
-    <link href="https://fonts.gstatic.com" crossOrigin="" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900"
-        rel="stylesheet"
-    />
+<head>
+  <meta charSet="UTF-8" />
+  <meta name="author" content="Kriti Vajjhula, Ishita Saxena, Archita Singh, Manu Charu" />
+  <meta name="description" content="This is our plant website" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>Plant Parenthood</title>
+  <link rel="icon" type="image/png" href="./img/plant-icon-white.png" />
+
+  <!-- IMPORT FONTS -->
+  <link href="https://fonts.googleapis.com" />
+  <link href="https://fonts.gstatic.com" crossOrigin="" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900" rel="stylesheet" />
 </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
 </html>
